--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
+    "start-lean": "webpack-dev-server --inline",
     "build": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "test": "mocha"
   },
